update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,12 @@ set -ga terminal-overrides ",*256col*:Tc"
 
 # -- windows & pane creation ---------------------------------------------------
 
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
 # new window retains current path, possible values are:
 #   - true
 #   - false (default)
@@ -347,8 +353,7 @@ bind C-a send-prefix
 # move status line to top
 #set -g status-position top
 
-
-# -- custom variables ----------------------------------------------------------
+# # -- custom variables ----------------------------------------------------------
 # to define a custom #{foo} variable, define a POSIX shell function between the
 # '# EOF' and the '# "$@"' lines. Please note that the opening brace { character
 # must be on the same line as the function name otherwise the parse won't detect
@@ -372,3 +377,17 @@ bind C-a send-prefix
 # "$@"
 # # /!\ do not remove the previous line
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Loading themes 
+set -g @themepack 'powerline/default/cyan'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
